--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
+<!DOCTYPE html>
 <html>
+
+<head>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
 <body>
   <h1>Du har kommet til rett sted</h1>
-  <p>Kle på deg, det er 17 minusgrader ute</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
+  <p>Kle på deg, det er kaldt ute</p>
 
+</body>
 </html>
